<resources>

    <string name="app_name">Mi App Personal</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="signIn">Ingresar</string>

    <string name="titleHome">Inicio</string>
    <string name="titleData">Mis Datos</string>
    <string name="titleConf">Configuración</string>
    <string name="titleLogOut">Cerrar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myPreferenceTitle">Selecionar Idioma</string>
    <string name="default_language">Español (recomendado)</string>
    <string name="textCuenta">¿No tiene una cuenta?</string>
    <string name="textRegistrar">Cree una</string>
    <string name="register_fullname">Nombre completo</string>
    <string name="register_username">Usuario</string>
    <string name="register_password">Contraseña</string>
    <string name="register_save">Registrar</string>

    <string-array name="listArray">
        <item>Headings</item>
        <item>Headings and Details</item>
        <item>All Data</item>
    </string-array>

    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
